# no.1-production-ready-rag

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  design-qa.md  docker-compose.dev.yml  docker-compose.yml
.learnings/: ERRORS.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db_degradation.py  logging_config.py  main.py  readiness.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  business_views.py  categories.py  chat.py  dashboard.py  documents.py  evaluation.py  feedback.py  health.py  knowledge_bases.py  nl2sql.py  search.py  services.py  settings.py  table_browser.py
backend/app/clients/: external_parser.py  http_retry.py  object_storage.py  oci_auth.py  oci_database.py  oci_document_understanding.py  oci_enterprise_ai.py  oci_genai.py  oci_guardrails.py  oci_speech.py  oracle.py  parser_service.py  pipeline_stage.py  preprocess_service.py  select_ai.py
backend/app/nl2sql/: __init__.py  cache.py  guardrail.py  pipeline.py  presets.py  router.py
backend/app/rag/: agentic_adapter.py  asset_summary.py  audit.py  business_view_config.py  chat_history_sanitization.py  chunk_template_scorecard.py  chunking.py  chunking_strategy.py  diagnostics.py  enterprise_ai_probe.py  evaluation.py  evaluation_adapter.py  evaluation_cli.py  extraction_field_adapter.py  file_processing_evaluation.py  file_processing_golden_cli.py  file_processing_staging.py  file_processing_staging_cli.py  file_processing_trend_cli.py  generation_adapter.py  generation_config.py  generation_contract.py  generation_settings_migration.py  graph_adapter.py  graph_index.py  grounding_adapter.py  guardrail_adapter.py  guardrails.py  ingestion.py  ingestion_job_runner.py  ingestion_quality.py  ingestion_strategy.py  ingestion_worker.py  kb_adapter_config.py  memory_engineering.py  navigation.py  observability.py  oracle_schema.py  parser_adapter_contract.py  parser_adapter_contract_cli.py  (+21 more)
backend/app/schemas/: auth.py  business_view.py  category.py  chat.py  common.py  dashboard.py  document.py  evaluation.py  extraction.py  feedback.py  knowledge_base.py  nl2sql.py  search.py  service_management.py  settings.py  table_browser.py
backend/app/select_ai/: __init__.py  provisioning.py
backend/app/services/: __init__.py  catalog.py  control.py  service_env.py  status.py
backend/scripts/: probe_oci_enterprise_ai_openai_vision.py
backend/tests/: __init__.py  _ai_stubs.py  _oracle_test_db.py  conftest.py  support.py  test_agentic_adapter.py  test_asset_summary.py  test_audit.py  test_auth_api.py  test_business_view_config.py  test_business_views_api.py  test_categories.py  test_chat_api.py  test_chat_history_sanitization.py  test_chunk_set_experiments.py  test_chunk_template_scorecard.py  test_chunking.py  test_chunking_strategy.py  test_config.py  test_dashboard.py  test_db_degradation.py  test_deployment_contract.py  test_diagnostics.py  test_document_chunk_set_publish.py  test_document_ingestion_config.py  test_document_recipes.py  test_document_workspace.py  test_enterprise_ai_probe.py  test_evaluation.py  test_evaluation_adapter.py  test_evaluation_cli.py  test_evaluation_fixture.py  test_external_parser_client.py  test_extraction_fields.py  test_feedback_api.py  test_file_processing_evaluation.py  test_file_processing_staging.py  test_file_processing_trend_cli.py  test_generation_adapter.py  test_generation_contract.py  (+75 more)
services/parsers/asr/: Dockerfile  README.md  pyproject.toml
services/parsers/asr/app/: main.py  transcribe.py
services/parsers/asr/tests/: test_transcribe.py
services/parsers/docling/: Dockerfile  README.md  pyproject.toml
services/parsers/docling/app/: main.py
services/parsers/dots_ocr/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/parsers/dots_ocr/app/: main.py
services/parsers/glm_ocr/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/parsers/glm_ocr/app/: main.py
services/parsers/marker/: Dockerfile  README.md  pyproject.toml
services/parsers/marker/app/: main.py
services/parsers/mineru/: Dockerfile  README.md  pyproject.toml
services/parsers/mineru/app/: main.py
services/parsers/oci_document_understanding/: Dockerfile  README.md  pyproject.toml
services/parsers/oci_document_understanding/app/: main.py
services/parsers/oci_genai_vision/: Dockerfile  README.md  pyproject.toml
services/parsers/oci_genai_vision/app/: main.py
services/parsers/unlimited_ocr/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/parsers/unlimited_ocr/app/: __init__.py  main.py
services/parsers/unstructured/: Dockerfile  README.md  pyproject.toml
services/parsers/unstructured/app/: main.py
services/pipeline/graphrag/: Dockerfile  README.md  pyproject.toml
services/pipeline/graphrag/app/: main.py
services/pipeline/graphrag/tests/: test_graphrag_stage.py
services/preprocess/: Dockerfile  README.md  pyproject.toml
services/preprocess/app/: converters.py  main.py
services/preprocess/csv_to_json/: Dockerfile  README.md  pyproject.toml
services/preprocess/csv_to_json/app/: converters.py  main.py
services/preprocess/csv_to_json/tests/: test_converter.py
services/preprocess/excel_to_json/: Dockerfile  README.md  pyproject.toml
services/preprocess/excel_to_json/app/: converters.py  main.py
services/preprocess/excel_to_json/tests/: test_converter.py
services/preprocess/image_enhance/: Dockerfile  README.md  pyproject.toml
services/preprocess/image_enhance/app/: converters.py  main.py
services/preprocess/image_enhance/tests/: test_converter.py
services/preprocess/office_to_pdf/: Dockerfile  README.md  pyproject.toml
services/preprocess/office_to_pdf/app/: converters.py  main.py
services/preprocess/office_to_pdf/tests/: test_converter.py
services/preprocess/pdf_to_page_images/: Dockerfile  README.md  pyproject.toml
services/preprocess/pii_redact/: Dockerfile  README.md  pyproject.toml
services/preprocess/url_to_markdown/: Dockerfile  README.md  pyproject.toml
(+331 files in other folders)
