[project]
name = "production-ready-rag-backend"
version = "0.1.0"
description = "Production-ready RAG backend (FastAPI + OCI Enterprise AI + Oracle 26ai)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121,<1.0",
    "starlette>=1.0.1,<2.0",
    "anyio>=4.0,<4.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "httpx>=0.27,<0.28",
    "gunicorn>=23,<24",
    "oci>=2.168",
    "oracledb>=3.4",
    "python-json-logger>=4.0",
    "prometheus-client>=0.24",
    "charset-normalizer>=3.4,<4",
    "pypdf>=6.4,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "black>=25.1",
    "mypy>=1.14",
    "bandit>=1.8",
    "pip-audit>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
