[project]
name = "production-ready-rag-backend"
version = "0.1.0"
description = "Production-ready RAG backend (FastAPI + OCI Enterprise AI + Oracle 26ai)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121,<1.0",
    "starlette>=1.0.1,<2.0",
    "anyio>=4.0,<4.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "httpx==0.28.1",
    "gunicorn>=23,<24",
    "oci>=2.168",
    "oracledb>=3.4",
    "python-json-logger>=4.0",
    "prometheus-client>=0.24",
    "charset-normalizer>=3.4,<4",
    "pypdf>=6.4,<7",
    "pymupdf>=1.26,<2",
    "rag-parser-core",
    "rag-pipeline-core",
    "production-ready-backend-core",
]

# 重い parser 依存(docling/marker/unstructured/mineru/dots_ocr)は backend に載せない。
# 各 parser は services/parsers/<name> の独立イメージで動き、backend は HTTP で委譲する
# (app.clients.parser_service)。各 parser は独立して upgrade でき、相互に非干渉。
#
# 下記 per-adapter extra は **ローカルでの単一 adapter デバッグ専用**(任意)。
# marker(pillow<11)と unstructured(pillow>=11.1)は同一環境で共存不可のため、
# combined extra は提供しない。runtime backend / 既定 `uv sync` は parser を一切入れない。
[project.optional-dependencies]
docling = ["docling==2.103.0"]
marker = ["marker-pdf[full]==1.10.2"]
unstructured = ["unstructured[all-docs]==0.23.1"]

[tool.uv]
# marker と unstructured は pillow 系で共存不可。conflicts 宣言で universal lock を成立させる
# (両 extra を同時に install しない限り解決可能)。
conflicts = [[{ extra = "marker" }, { extra = "unstructured" }]]

[tool.uv.sources]
rag-parser-core = { path = "../packages/rag_parser_core", editable = true }
rag-pipeline-core = { path = "../packages/rag_pipeline_core", editable = true }
# 共有 backend インフラ（platform repo の sibling パス）。変更時は uv lock 再生成が必要。
production-ready-backend-core = { path = "../../no.1-production-ready-platform/packages/backend_core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "black>=25.1",
    "mypy>=1.14",
    "bandit>=1.8",
    "pip-audit>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
# 偽陽性/本コードベースで許容済みのチェックを除外する(High の B324 はコード側で
# usedforsecurity=False により正修正済み)。
#   B101: 不変条件の表明に assert を用いる(本番最適化前提のコードではない)
#   B404/B603: services/control の subprocess は allowlist 化した固定引数のみ実行する
#   B608: oracle の SQL は bind 変数利用で、f-string は内部生成の SQL 断片/識別子のみ
skips = ["B101", "B404", "B603", "B608"]
