[project]
name = "preprocess-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: parse 前の原本変換(Office→PDF / PDF→画像PDF)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "pymupdf>=1.24,<2",
]

[tool.uv.sources]
rag-parser-core = { path = "../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
