[project]
name = "parser-dots-ocr"
version = "0.1.0"
description = "Dots.OCR (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "dots-ocr",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }
# Dots.OCR は PyPI 配布が無く GitHub からの install が公式手順。
dots-ocr = { git = "https://github.com/rednote-hilab/dots.ocr.git" }
# GPU 版 torch を PyTorch CUDA index から取得する。
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
