[project]
name = "parser-dots-ocr"
version = "0.1.0"
description = "Dots.OCR (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "dots-ocr",
    # Dots.OCR の HF 実行(qwen_vl_utils)は torchvision を import する。
    # RTX 50xx(sm_120) 対応のため CUDA 13 系 wheel を解決できる版を下限にする。
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }
# Dots.OCR は PyPI 配布が無く GitHub からの install が公式手順。
dots-ocr = { git = "https://github.com/rednote-hilab/dots.ocr.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
