[project]
name = "parser-glm-ocr"
version = "0.1.0"
description = "GLM-OCR (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    # GLM-OCR は HuggingFace 配布(zai-org/GLM-OCR)。専用 pip package は無く、
    # transformers で HF からモデルをロードして実 OCR する。
    "transformers>=4.46",
    "accelerate>=1.0",
    "pillow>=10.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }
# GPU 版 torch を PyTorch CUDA index から取得する(CPU wheel と取り違えない)。
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
