[project]
name = "parser-glm-ocr"
version = "0.1.0"
description = "GLM-OCR (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    # GLM-OCR は HuggingFace 配布(zai-org/GLM-OCR)。専用 pip package は無く、
    # transformers で HF からモデルをロードして実 OCR する。
    "transformers>=4.46",
    "accelerate>=1.0",
    "pillow>=10.0",
    # PDF 入力をページ画像へラスタライズするため(GLM-OCR は画像入力前提)。
    "pymupdf>=1.27",
    # RTX 50xx(sm_120) は古い cu124 wheel だと非対応警告が出るため、
    # CUDA 13 系 wheel を解決できるバージョンを下限にする。
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
