[project]
name = "parser-marker"
version = "0.1.0"
description = "Marker parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "marker-pdf[full]==1.10.2",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
