[project]
name = "parser-mineru"
version = "0.1.0"
description = "MinerU (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "mineru[core]==3.4.0",
    # MinerU 3.4.0 の重複文字除去は list を前提とし、pdftext 0.7 の PageChars と非互換。
    "pdftext==0.6.3",
    # RTX 50xx(sm_120) は古い cu124 wheel だと非対応警告が出るため、
    # CUDA 13 系 wheel を解決できるバージョンを下限にする。
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
