[project]
name = "parser-oci-document-understanding"
version = "0.1.0"
description = "OCI Document Understanding parser microservice (OCI クラウド・薄いプロキシ)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "oci>=2.168",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
