[project]
name = "parser-oci-genai-vision"
version = "0.1.0"
description = "OCI Generative AI (Vision) parser microservice (OCI クラウド・薄いプロキシ)"
requires-python = ">=3.12"
# OCI Generative AI は OpenAI 互換の API キー認証(httpx、oci 署名不要)のため oci SDK は不要。
dependencies = [
    "rag-parser-core[service]",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
