[project]
name = "parser-unlimited-ocr"
version = "0.1.0"
description = "Unlimited-OCR (GPU) parser microservice (independent dependency boundary)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "transformers>=4.57.1,<5",
    "accelerate>=1.0",
    "pymupdf>=1.27",
    "pillow>=12.0",
    "matplotlib>=3.10",
    "requests>=2.32",
    "einops>=0.8",
    "addict>=2.4",
    "easydict>=1.13",
    "psutil>=7.0",
    # RTX 50xx(sm_120) は古い cu124 wheel だと非対応警告が出るため、
    # CUDA 13 系 wheel を解決できるバージョンを下限にする。
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
