[project]
name = "pipeline-graphrag-service"
version = "0.1.0"
description = "pipeline ステージ microservice: graphrag プロファイル解決(決定論・外部依存なし)"
requires-python = ">=3.12"
dependencies = [
    "rag-pipeline-core[service]",
]

[tool.uv.sources]
rag-pipeline-core = { path = "../../../packages/rag_pipeline_core", editable = true }
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
