[project]
name = "preprocess-csv-to-json-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: CSV→構造化 JSON(csv2json 再マップ)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
