[project]
name = "preprocess-excel-to-json-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: Excel(.xls/.xlsx)→構造化 JSON"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "openpyxl>=3.1,<4",
    "xlrd>=2.0,<3",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
