[project]
name = "preprocess-image-enhance-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: 画像補正(OpenCV、OCR 前処理)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "opencv-python-headless>=4.10,<5.0",
    "numpy>=1.26,<3.0",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
