[project]
name = "preprocess-pdf-to-page-images-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: PDF→ページ画像PDF(PyMuPDF ラスタライズ)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "pymupdf>=1.24,<2",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
