[project]
name = "preprocess-url-to-markdown-service"
version = "0.1.0"
description = "前処理(Preprocess)microservice: URL→クリーン Markdown(trafilatura、外部 SaaS 非使用)"
requires-python = ">=3.12"
dependencies = [
    "rag-parser-core[service]",
    "httpx>=0.28,<1.0",
    "trafilatura>=1.12,<2.0",
]

[tool.uv.sources]
rag-parser-core = { path = "../../../packages/rag_parser_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
